# SLH

./: README.md
Lab1/SQLInjection/: README.md
Lab1/advancedCSRF/: README.md
Lab1/basicCSRF/: README.md
Lab2/to_give/lab02/: .gitignore  Cargo.toml  report.md
Lab2/to_give/lab02/src/: backend.rs  consts.rs  database.rs  email.rs  main.rs  utils.rs
Lab2/to_give/lab02/src/backend/: handlers_auth.rs  handlers_unauth.rs  middlewares.rs  models.rs  router.rs
Lab2/to_give/lab02/src/utils/: error_messages.rs  webauthn.rs
Lab2/to_give/lab02/src/utils/validation/: constants.rs  mod.rs
Lab2/to_give/lab02/src/utils/validation/types/: email_input.rs  file_input.rs  mod.rs  text_input.rs
Lab2/to_give/lab02/templates/: home.hbs  index.hbs  login.hbs  recover.hbs  register.hbs
Lab2/validation/: file.rs  mod.rs  text.rs  types.rs
Lab2/validation/validators/: file.rs  mod.rs  text.rs
Lab3/karak/: Cargo.toml  database.json  database.json.example  report.md
Lab3/karak/access_control/: model.conf  policy.csv
Lab3/karak/src/: authorization.rs  db.rs  lib.rs  main.rs  models.rs  services.rs
Lab3/karak/src/utils/: input_validation.rs  mod.rs  password_utils.rs
